--- a/aula8/assets/css/style.css
+++ b/aula8/assets/css/style.css
@@ -82,8 +82,52 @@
 	float: left;
 }
 
+.div_7 {
+	display: none;
+	width: 14px;
+	height: 14px;
+	background-color: black;
+	border-radius: 25px;
+	margin-left: 14%;
+	margin-top: 14%;
+	float: left;
+}
+
+.div_8 {
+	display: none;
+	width: 14px;
+	height: 14px;
+	background-color: black;
+	border-radius: 25px;
+	margin-left: 14%;
+	margin-top: 14%;
+	float: left;
+}
+
+.div_9 {
+	display: none;
+	width: 14px;
+	height: 14px;
+	background-color: black;
+	border-radius: 25px;
+	margin-left: 14%;
+	margin-top: 14%;
+	float: left;
+}
+
+.div_10 {
+	display: none;
+	width: 12px;
+	height: 12px;
+	background-color: black;
+	border-radius: 25px;
+	margin-left: 9%;
+	margin-top: 14%;
+	float: left;
+}
+
 #dado:hover {
-	border-color: gold;
+	border: 2px solid gold;
 }
 
 @keyframes showPointer {
